--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "babel-preset-react-app": "^10.0.1",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "google-map-react": "^2.2.1",
+    "leaflet": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^3.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
@@ -52,6 +55,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-mdi": "^1.2.47",
+    "@iconify/react": "^4.1.1",
     "tailwindcss": "^3.3.3"
   }
 }
