--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "tailwindcss-box-shadow": "^2.0.1",
+    "tailwindcss-displaymodes": "^1.0.4",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
