--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,18 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "google-map-react": "^2.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss-box-shadow": "^2.0.1",
     "tailwindcss-displaymodes": "^1.0.4",
     "uninstall": "^0.0.0",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
