--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
