--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Musecat",
-  "name": "Musecat",
+  "short_name": "Muscat",
+  "name": "Muscat",
   "icons": [
     {
       "src": "favicon.ico",
