--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "tailwindcss-displaymodes": "^1.0.4",
     "uninstall": "^0.0.0",
     "universal-cookie": "^6.1.1",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
