--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
@@ -24,6 +25,7 @@
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.9.4",
+    "request": "^2.88.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
