--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "flowbite-react": "^0.5.0",
     "google-map-react": "^2.2.1",
     "moment": "^2.29.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-html-table-to-excel": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
