--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "babel-preset-react-app": "^10.0.1",
+    "date-fns": "^2.30.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "google-map-react": "^2.2.1",
     "moment": "^2.29.4",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-html-table-to-excel": "^2.0.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
