--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -24,7 +25,10 @@
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
-    "nodemailer": "^6.9.4",
+    "nodemailer": "^6.9.5",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "request": "^2.88.2",
     "validator": "^13.11.0"
   },
