--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
