--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.11.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
