--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,13 @@
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-datetime-picker": "^5.5.2",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.2",
+    "react-google-autocomplete": "^2.7.3",
+    "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.1",
     "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.11.0",
