--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "react-hot-toast": "^2.4.1",
     "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.11.0",
+    "react-image-crop": "^10.1.8",
+    "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
