--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "jodit-react": "^1.3.39",
+    "luxon": "^3.4.3",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
