--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "babel-preset-react-app": "^10.0.1",
+    "cloudinary": "^1.41.0",
     "date-fns": "^2.30.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "jodit-react": "^1.3.39",
+    "luxon": "^3.4.3",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
@@ -39,6 +41,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "tailwindcss-box-shadow": "^2.0.1",
     "uninstall": "^0.0.0",
