--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
