--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "jodit-react": "^1.3.39",
+    "jspdf": "^2.5.1",
     "luxon": "^3.4.3",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
@@ -37,11 +38,13 @@
     "react-icons": "^4.11.0",
     "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
+    "react-pdf": "^7.5.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-to-print": "^2.14.15",
     "redux-persist": "^6.0.0",
     "tailwindcss-box-shadow": "^2.0.1",
     "uninstall": "^0.0.0",
