--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^21.5.2",
     "request": "^2.88.2",
     "validator": "^13.11.0"
   },
