testing website done

--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-datetime-picker": "^5.5.2",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.1",
@@ -44,7 +45,9 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-social-login-buttons": "^3.9.1",
     "react-to-print": "^2.14.15",
+    "reactjs-social-login": "^2.6.3",
     "redux-persist": "^6.0.0",
     "tailwindcss-box-shadow": "^2.0.1",
     "uninstall": "^0.0.0",
