--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.25.0",
     "react-datetime-picker": "^5.5.2",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.2",
     "react-facebook-login": "^4.1.1",
