--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "google-auth-library": "^9.2.0",
+    "googleapis": "^129.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
