--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-social-login-buttons": "^3.9.1",
     "react-to-print": "^2.14.15",
