--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,8 @@
     "react-to-print": "^2.14.15",
     "reactjs-social-login": "^2.6.3",
     "redux-persist": "^6.0.0",
+    "stream-chat": "^8.14.5",
+    "stream-chat-react": "^11.3.0",
     "tailwindcss-box-shadow": "^2.0.1",
     "uninstall": "^0.0.0",
     "universal-cookie": "^6.1.1",
