dark mode setted up for vvendor side

--- a/client/.env
+++ b/client/.env
@@ -3,3 +3,4 @@ REACT_APP_FB_CLIENT_ID = 1346318836020986
 REACT_APP_GOOGLE_CLIENT_ID = 
 REACT_APP_TEST_IP =
 REACT_APP_PROD_IP =
+REACT_APP_STREAM_API_KEY = wk34druzbujm
