--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@cometchat-pro/chat": "^3.0.13",
+    "@cometchat/chat-sdk-javascript": "^4.0.3",
+    "@cometchat/chat-uikit-react": "^4.1.1",
+    "@cometchat/uikit-elements": "^4.1.3",
+    "@cometchat/uikit-resources": "^4.1.3",
+    "@cometchat/uikit-shared": "^4.1.3",
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
