--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^21.5.2",
     "request": "^2.88.2",
+    "stream-chat": "^8.14.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
