--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
+    "react-country-region-selector": "^3.6.1",
     "react-datepicker": "^4.25.0",
     "react-datetime-picker": "^5.5.2",
     "react-day-picker": "^8.10.0",
@@ -48,6 +49,7 @@
     "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
     "react-pdf": "^7.5.1",
+    "react-phone-number-input": "^3.3.9",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
@@ -56,6 +58,7 @@
     "react-select": "^5.8.0",
     "react-social-login-buttons": "^3.9.1",
     "react-to-print": "^2.14.15",
+    "react-world-flags": "^1.6.0",
     "reactjs-social-login": "^2.6.3",
     "redux-persist": "^6.0.0",
     "stream-chat": "^8.14.5",
