--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 PUBLIC_URL = http://157.230.88.103
 REACT_APP_FB_CLIENT_ID = 1346318836020986
 REACT_APP_GOOGLE_CLIENT_ID = 
-REACT_APP_IP = http://localhost:5000/api/v1/
+REACT_APP_IP = https://omawhereto.com/api/v1/
 REACT_APP_STREAM_API_KEY = wk34druzbujm
