--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,7 @@
     "@react-google-maps/api": "^2.19.2",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "babel-preset-react-app": "^10.0.1",
@@ -108,6 +107,9 @@
   "devDependencies": {
     "@iconify/icons-mdi": "^1.2.47",
     "@iconify/react": "^4.1.1",
+    "@testing-library/jest-dom": "^6.4.1",
+    "@testing-library/react": "^14.2.1",
+    "jest": "^29.7.0",
     "tailwindcss": "^3.3.3"
   }
 }
