project checklist user 1 completed

--- a/server/.env
+++ b/server/.env
@@ -17,4 +17,4 @@ STREAM_ADMIN_USERNAME = internet
 GOOGLE_CLIENT_ID = 502871150406-idu2qdtbvltj3gatvkfd7kb72cv9vlau.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 GOOGLE_MAP_KEY =
-GOOGLE_REDIRECT_URL = http://localhost:3000
+GOOGLE_REDIRECT_URL = https://omanwhereto.com
