--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^4.11.0",
     "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
+    "react-parallax": "^3.5.1",
     "react-pdf": "^7.5.1",
     "react-phone-number-input": "^3.3.9",
     "react-places-autocomplete": "^7.3.0",
