--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,12 @@
     "babel-preset-react-app": "^10.0.1",
     "cloudinary": "^1.41.0",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "ical": "^0.8.0",
+    "ical.js": "^2.0.0",
+    "ics": "^3.7.2",
     "jodit-react": "^1.3.39",
     "jspdf": "^2.5.1",
     "luxon": "^3.4.3",
@@ -42,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.2",
     "react-facebook-login": "^4.1.1",
+    "react-ga": "^3.3.1",
     "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.1",
