--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.1",
     "react-html-table-to-excel": "^2.0.0",
+    "react-icalendar-link": "^3.0.2",
     "react-icons": "^4.11.0",
     "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
