--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "express-session": "^1.17.3",
     "google-auth-library": "^9.2.0",
     "googleapis": "^129.0.0",
+    "ical-generator": "^7.0.0",
+    "ics": "^3.7.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
