--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,8 @@
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
     "react-pdf": "^7.5.1",
+    "react-phone-input": "^1.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.9",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.1.2",
