--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "jspdf": "^2.5.1",
     "luxon": "^3.4.3",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.45",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
     "query-string": "^8.1.0",
