--- a/client/package.json
+++ b/client/package.json
@@ -75,6 +75,7 @@
     "stream-chat": "^8.14.5",
     "stream-chat-react": "^11.3.0",
     "tailwindcss-box-shadow": "^2.0.1",
+    "tailwindcss-textshadow": "^2.1.3",
     "uninstall": "^0.0.0",
     "universal-cookie": "^6.1.1",
     "validator": "^13.11.0",
