production build changes

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-PUBLIC_URL = http://157.230.88.103
+PUBLIC_URL = https://omanwhereto.com
 REACT_APP_FB_CLIENT_ID = 1346318836020986
 REACT_APP_GOOGLE_CLIENT_ID = 
 REACT_APP_IP = https://omanwhereto.com/api/v1/
