--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.1",
     "react-places-autocomplete": "^7.3.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
