changed database url

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URL=mongodb+srv://muscat:muscat@cluster0.fkztfi7.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://muscat:muscat@cluster0.fkztfi7.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb://0.0.0.0:27017/muscat
 
 CLOUDINARY_NAME = mayurs-media
 CLOUDINARY_API_KEY = 244236722776258
