--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,9 @@ PORT=5000
 # MONGO_URL=mongodb+srv://muscat:muscat@cluster0.fkztfi7.mongodb.net/?retryWrites=true&w=majority
 MONGO_URL = mongodb://0.0.0.0:27017/muscat
 
-CLOUDINARY_NAME = mayurs-media
-CLOUDINARY_API_KEY = 244236722776258
-CLOUDINARY__API_SECRET = aOwJaj5lgdy-KHKHTIVhz0EoGDY
+CLOUDINARY_NAME = dxmbvi3gf
+CLOUDINARY_API_KEY = 648964236951474
+CLOUDINARY__API_SECRET = dRoaBWHLMCBwTXEMbs10p1OI7K4
 
 HASH_SECRET = thisishashsecret
 JWT_ACCESSTOKEN_SECRET = thisisaccesstokensecret
