--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase-admin": "^12.1.1",
     "google-auth-library": "^9.2.0",
     "googleapis": "^129.0.0",
     "ical-generator": "^7.0.0",
