--- a/client/package.json
+++ b/client/package.json
@@ -51,10 +51,11 @@
     "react-ga": "^3.3.1",
     "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
+    "react-horizontal-scrolling-menu": "^7.1.1",
     "react-hot-toast": "^2.4.1",
     "react-html-table-to-excel": "^2.0.0",
     "react-icalendar-link": "^3.0.2",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
@@ -69,11 +70,13 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-social-login-buttons": "^3.9.1",
     "react-to-print": "^2.14.15",
     "react-world-flags": "^1.6.0",
     "reactjs-social-login": "^2.6.3",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "stream-chat": "^8.14.5",
     "stream-chat-react": "^11.3.0",
     "tailwindcss-box-shadow": "^2.0.1",
