--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,7 @@
     "react-phone-number-input": "^3.4.1",
     "react-places-autocomplete": "^7.3.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
