--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,12 @@
     "babel-preset-react-app": "^10.0.1",
     "caniuse-lite": "^1.0.30001625",
     "cloudinary": "^1.41.0",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "framer-motion": "^11.3.8",
     "ical": "^0.8.0",
     "ical.js": "^2.0.0",
     "ics": "^3.7.2",
@@ -57,6 +59,7 @@
     "react-icalendar-link": "^3.0.2",
     "react-icons": "^4.12.0",
     "react-image-crop": "^10.1.8",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
     "react-pdf": "^7.5.1",
@@ -80,6 +83,7 @@
     "slick-carousel": "^1.8.1",
     "stream-chat": "^8.14.5",
     "stream-chat-react": "^11.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-box-shadow": "^2.0.1",
     "tailwindcss-textshadow": "^2.1.3",
     "uninstall": "^0.0.0",
@@ -129,6 +133,6 @@
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.1",
     "jest": "^29.7.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.6"
   }
 }
