--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "react-image-crop": "^10.1.8",
     "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
+    "react-multi-carousel": "^2.8.5",
     "react-parallax": "^3.5.1",
     "react-pdf": "^7.5.1",
     "react-phone-input": "^1.2.1",
@@ -137,5 +138,4 @@
     "jest": "^29.7.0",
     "tailwindcss": "^3.4.6"
   }
-  
 }
