--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.5.0",
     "babel-preset-react-app": "^10.0.1",
     "buffer": "^6.0.3",
@@ -27,6 +28,7 @@
     "cloudinary": "^1.41.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.1.6",
     "file-saver": "^2.0.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
@@ -35,6 +37,7 @@
     "ical.js": "^2.0.0",
     "ics": "^3.7.2",
     "jodit-react": "^1.3.39",
+    "jsdom": "^24.1.1",
     "jspdf": "^2.5.1",
     "luxon": "^3.4.3",
     "moment": "^2.29.4",
